# nexus2.0-Latam

./: .env.example  .gitignore  CHANGELOG_PROMPTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: evals.yml
docs/: prompt-governance.md
evals/datasets/: system_eval_cases.yaml
prompts/nsr_system/: dax_executor.md  dax_query_developer.md  dax_result_summarizer.md  dax_validator.md  intent_clarifier.md  summarizer.md  system_prompt.md  visualization_agent.md
prompts/shared/: business_rules.md
scripts/: diff_prompts.py  run_system_eval.py  summarize_results.py
tests/: test_eval_loader.py
